--- a/angular.json
+++ b/angular.json
@@ -2,5 +2,42 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
-  "projects": {}
+  "projects": {
+    "ngx-tab-scroll": {
+      "root": "projects/ngx-tab-scroll",
+      "sourceRoot": "projects/ngx-tab-scroll/src",
+      "projectType": "library",
+      "prefix": "ngx",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ngx-tab-scroll/tsconfig.lib.json",
+            "project": "projects/ngx-tab-scroll/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-tab-scroll/src/test.ts",
+            "tsConfig": "projects/ngx-tab-scroll/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-tab-scroll/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ngx-tab-scroll/tsconfig.lib.json",
+              "projects/ngx-tab-scroll/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "ngx-tab-scroll"
 }
