Fixed bootstrap version; added demo page (not working correctly at he time of this commit)

--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng serve demo",
+    "build": "yarn run build:lib && yarn run lib:copy:styles",
+    "build:demo": "ng build demo",
     "build:lib": "ng build ngx-tab-scroll",
     "test:lib": "ng test ngx-tab-scroll",
+    "lib:copy:styles": "cpx \"projects/ngx-tab-scroll/src/lib/*.scss\" \"dist/ngx-tab-scroll\"",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -20,7 +22,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "@ng-bootstrap/ng-bootstrap": "~4.2.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
@@ -37,6 +39,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "cpx": "^1.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
