--- a/projects/ngx-tab-scroll/package.json
+++ b/projects/ngx-tab-scroll/package.json
@@ -4,6 +4,6 @@
   "peerDependencies": {
     "@angular/common": "^7.2.0",
     "@angular/core": "^7.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.0"
+    "@ng-bootstrap/ng-bootstrap": "~4.2.1"
   }
 }
