--- a/projects/ngx-tab-scroll/package.json
+++ b/projects/ngx-tab-scroll/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "ngx-tab-scroll",
+  "name": "@ng11/ngx-tab-scroll",
   "publishConfig": {
     "registry": "https://registry.npmjs.com/"
   },
-  "version": "0.0.1-alpha.6",
+  "version": "0.0.1-alpha.7",
   "peerDependencies": {
     "@angular/common": "^11.2.0",
     "@angular/core": "^11.2.0",
