--- a/projects/ngx-tab-scroll/package.json
+++ b/projects/ngx-tab-scroll/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ibhargav90/ngx-tab-scroll",
+  "name": "ngx-tab-scroll@ibhargav90",
   "publishConfig": {
     "registry": "https://registry.npmjs.com/"
   },
