--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-tab-scroll",
-  "version": "0.0.1",
+  "name": "ngx-tab-scroll@ibhargav90",
+  "version": "0.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve demo",
