--- a/projects/ngx-tab-scroll/package.json
+++ b/projects/ngx-tab-scroll/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "ngx-tab-scroll@ibhargav90",
+  "name": "ibhargav90/ngx-tab-scroll",
   "publishConfig": {
     "registry": "https://registry.npmjs.com/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ibhargav90/ngx-tab-scroll.git"
   },
   "version": "0.0.1-alpha.7",
   "peerDependencies": {
