--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "ng serve demo",
     "build": "yarn run build:lib && yarn run lib:copy:styles && yarn run lib:copy:readme",
     "build:demo": "ng build demo",
-    "build:lib": "ng build ngx-tab-scroll",
-    "test:lib": "ng test ngx-tab-scroll",
+    "build:lib": "ng build ngx-tab-scroll11",
+    "test:lib": "ng test ngx-tab-scroll11",
     "lib:copy:styles": "cpx \"projects/ngx-tab-scroll/src/lib/*.scss\" \"dist/ngx-tab-scroll\"",
     "lib:copy:readme": "cpx \"README.md\" \"dist/ngx-tab-scroll\"",
     "lint": "ng lint",
